# bike-front-light

./: .gitmodules
hw/design/connector-pcb/: connector-pcb.kicad_pcb  connector-pcb.kicad_pro  connector-pcb.kicad_sch  pcba_outline.dxf
hw/design/connector-pcb/local.pretty/: KSC4.kicad_mod
hw/design/connector-pcb/models/: KSC423G70SHLFG.stp
hw/design/controller/: controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch
hw/design/controller_ild8150/: controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch  local.kicad_sym  pcba_outline.dxf
hw/design/controller_ild8150/local.pretty/: 2pinConnector.kicad_mod  ASPI-6045.kicad_mod
hw/design/controller_ild8150/models/: ASPI-6045.step
hw/design/controller_tld509x/: controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch  local.kicad_sym
hw/design/led-pcb/: led-pcb.kicad_pcb  led-pcb.kicad_pro  led-pcb.kicad_sch  pcba_outline.dxf
hw/design/led-pcb/local.pretty/: 2Pad.kicad_mod  SST-12-WxS.kicad_mod
hw/design/led-pcb/models/: SST-12-WxS.step
hw/docs/: conf.py  index.rst
hw/docs/arch/: index.rst
hw/docs/design/: controller.rst  index.rst  led_driver.rst
hw/docs/reqs/: index.rst
me/model/: Button.stl  Carrier.stl  Cover.stl  Lockring_Pressfit.stl
me/pcba/: ConnectorPcb.stl  ControlPcb.stl  LedPcb.stl
sw/: CMakeLists.txt  CMakePresets.json  README.md
sw/include/app/: brightness.h  button.h  comm.h  config.h  strobe.h  sys_state.h  tmon.h
sw/include/bsp/: config.h  light_control.h  pinout.h
sw/profiles/: ild8150.cmake  tld5099.cmake
sw/src/app/: brightness.c  button.c  comm.c  init.c  strobe.c  sys_state.c  tasks.c  tmon.c
sw/src/bsp/: board.c  led_driver_ild8150.c  led_driver_tld509x.c  led_driver_tle509x.c  usart.c
sw/tools/openocd/: board.cfg
